# powerco-churn

./: .dockerignore  .gitignore  Dockerfile  MLproject  README.md  container_id.txt  converter.py  main.py  pyproject.toml  python_env.yaml  requirements.txt  run_container.sh  tree.txt
Notebooks/: EDA.ipynb  Feature_Engineering.ipynb  ML.ipynb
Notebooks/mlruns/0/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/0851af04d3f24786ba9ce35f8527a57d/: meta.yaml
mlruns/0/0f22abcd5a6e40f6b9c48d6217c17396/: meta.yaml
mlruns/0/12b00b1e3e834d9cb2b04b416fb642dd/: meta.yaml
mlruns/0/25f3663b3a3444cc8c038d49c2489211/: meta.yaml
mlruns/0/277e5de8d5414871827708b70094a408/: meta.yaml
mlruns/0/2e21d187ff4d433097a7ea05ac6ec64b/: meta.yaml
mlruns/0/37ec378888dd415596f9484386ea7449/: meta.yaml
mlruns/0/3cb4bbcff4994b29ab299ef70e1a1900/: meta.yaml
mlruns/0/47b76f5e0fa045e49a4ed72d50a839f6/: meta.yaml
mlruns/0/4f6508fcd8a74337a7e05dabb93a65b7/: meta.yaml
mlruns/0/524c7c07e8ba493c9df149ec2420e34a/: meta.yaml
mlruns/0/5279d2d0f06747d580ef3371eac3b737/: meta.yaml
mlruns/0/52c3fcbd076844f98a1c4937da6321e0/: meta.yaml
mlruns/0/5bfca5e3f6f9491b92db7a98b8508947/: meta.yaml
mlruns/0/6336be6ce0124c9589f1b93c0764ab7d/: meta.yaml
mlruns/0/6a3eb25dd1af4ca4bd8b820767be831e/: meta.yaml
mlruns/0/6e4a8b8938eb438ab76185c9366b62fc/: meta.yaml
mlruns/0/7c38a2ac90b14ed697e2c73c4142da2c/: meta.yaml
mlruns/0/7deee767ae36422dae3444e02cbefd02/: meta.yaml
mlruns/0/80c321918f284257b417e15556331f85/: meta.yaml
mlruns/0/80e4be2c02784b988126a63167baa92b/: meta.yaml
mlruns/0/83d67982831c4e3b98567a609506393f/: meta.yaml
mlruns/0/86234ea0cbbe4929a314d0bdc9b88596/: meta.yaml
mlruns/0/a06a077b81334ffc9ef1c83528ce7366/: meta.yaml
mlruns/0/a4cad5a373604578862a88dd15b00532/: meta.yaml
mlruns/0/adf813e95f4048fd96615cb73512b0b1/: meta.yaml
mlruns/0/ae223782a3b3471296143c1c37765df9/: meta.yaml
mlruns/171397661730338109/: meta.yaml
mlruns/370504510814962150/: meta.yaml
mlruns/680121017095400573/: meta.yaml
mlruns/903185134689546534/: meta.yaml
mlruns/988364002448166934/: meta.yaml
src/powerco_churn/: test.py  train_model.py
(+356 files in other folders)
