[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerco-churn"
version = "0.1.0"
description = "PowerCo churn prediction pipeline"
authors = [{name = "Rodolfo Cruz", email = "rodolfo_pinheiro@hotmail.com"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["powerco_churn"]


